--- a/sdi25-master/package.json
+++ b/sdi25-master/package.json
@@ -2,6 +2,7 @@
   "name": "notreSDI2025",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "proxy": "http://127.0.0.1:8000",
   "dependencies": {
     "@babel/runtime": "^7.24.0",
@@ -106,4 +107,5 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^4.9.5"
   }
+
 }
