--- a/sdi25-master/package.json
+++ b/sdi25-master/package.json
@@ -73,7 +73,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
+    "build": "cross-env CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -103,9 +103,9 @@
     "@types/path-browserify": "^1.0.2",
     "@types/react-slick": "^0.23.13",
     "@types/uuid": "^9.0.8",
+    "cross-env": "^10.1.0",
     "eslint": "^8.56.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^4.9.5"
   }
-
 }
